<resources>
    <string name="app_name">DMAC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome to Dynamic Mobile Assessment of Cognition </string>
    <string name="title_activity_step1">Answer These</string>
    <string name="step1_question1">Have you suffered from a concussion or traumatic brain injury?</string>
    <string name="step1_question2">Did you lose consciousness after your brain injury?</string>
    <string name="title_activity_step2">Step2</string>
    <string name="answer_all">Please Answer all questions</string>
    <string name="instruction">Instruction</string>
    <string name="step2_insturction_content">Remember the words which will flash. You will be given maximum of three attempts.</string>
    <string name="got_it">Got It</string>
    <string name="try_again">Start Again</string>
    <string name="attemps_over">Sorry, but all your attempts are over.</string>
    <string name="type_all_remember">Type the words with space.</string>
    <string name="speak_all">Speak all the words now.</string>
    <string name="no_answers">Please provide the answers</string>
    <string name="none">NONE</string>
    <string name="speak_words">Please speak the words</string>
    <string name="title_activity_step4">Audio</string>
    <string name="start">START</string>
    <string name="done">DONE</string>
    <string name="step4_instruction_content">Please increase your device’s volume, an audio will now play. Please remember this and type in or repeat in the same words.</string>
    <string name="story_play_one_instruction">Please increase your device volume, a short story 1 audio will play. Please remember, you will be asked to recall in same words, immediate after and later.</string>
    <string name="story_play_two_instruction">Please increase your device volume, a short story 2 audio will play. Please remember, you will be asked to recall in same words, immediate after and later.</string>
    <string name="next">NEXT</string>
    <string name="play">PLAY</string>
    <string name="type_sentence">Type the sentence</string>
    <string name="provide_answers">Please provide the answers</string>
    <string name="audio_second">Audio 2</string>
    <string name="speak_sentence">Speak the sentence</string>
    <string name="title_activity_step5">Step5</string>
    <string name="primary_color_instruction">Please speak as many colors as you can, after the examiner tells you start. Examiner, please take the tablet to enter the colors answers. </string>
    <string name="type_primary_color">Please speak or type in as many color as you can in the following screen</string>
    <string name="final_attempt">This is your final attempt</string>
    <string name="base_colors">white,blue,red,orange,yellow,violet,black,gray,green,brown,magenta,indigo,pink,baize,purple,cyan</string>
    <string name="title_activity_picture_flash">PictureFlash</string>
    <string name="pictureFlashInstruction">Pictures will flash one after another. Remember the pictures, you will be asked to recall them immediate after and later.</string>
    <string name="title_activity_picture_flash_answer">PictureFlashAnswer</string>
    <string name="pictureFlashAnswerInstruction">Please recall the pictures that you have been asked to remember.</string>
    <string name="pictureFlashAnswerInstructionTab">Please recall the picture you have been asked to remember in beginning of the exam. Examiner, please take the tablet to enter the names of the pictures.</string>
    <string name="base_picture_flash_answer1">cow,bird,tree,boat,key</string>
    <string name="base_picture_flash_answer">cow,bird,tree,boat,key</string>
    <string name="base_picture_flash_answer2">duck,lamp,leaf,chair,kite</string>
    <string name="base_picture_flash_answer3">clock,bus,cat,spoon,shoe</string>
    <string name="title_activity_clock">Clock</string>
    <string name="title_activity_word_audio_flash">WordAudioFlash</string>
    <string name="wordAudioInstruction">Please listen to and remember the following spoken words. You will be asked to recall them immediate after and later.</string>
    <string name="title_activity_word_audio_flash_answer">WordAudioFlashAnswer</string>
    <string name="audioWordAnswerInstruction">Please recall the 5 words you have heard on audio in beginning of the test. Examiner, please take the tablet to enter the words.</string>
    <string name="numberRecallInstruction">Audio will play combination of the numbers, please type or speak the same number to enter.</string>
    <string name="base_word_audio_flash_answer">table,apple,money,yellow,rose</string>
    <string name="base_word_audio_flash_answer1">table,apple,money,yellow,rose</string>
    <string name="base_word_audio_flash_answer2">violet,zoo,pen,cup,rope</string>
    <string name="base_word_audio_flash_answer3">ring,bear,plate,laptop,door</string>
    <string name="time">10 Past 8</string>
    <string name="draw">DRAW</string>
    <string name="clockInstruction">Draw the time displayed on the panel.</string>
    <string name="title_activity_pattern">Pattern</string>
    <string name="show">SHOW</string>
    <string name="patternInstruction">Draw the pattern displayed </string>
    <string name="title_activity_pattern_layout">pattern_layout</string>
    <string name="title_activity_pattern_draw">patternDraw</string>
    <string name="proceed">PROCEED</string>
    <string name="pattern_answer">5K6</string>
    <string name="title_activity_traumatic_injury">TraumaticInjury</string>
    <string name="title_activity_final_screen">Result</string>
    <string name="patternDrawInstruction">Tap on the next alphabet and numbers in increasing order, Start from the L green button. Eg. 5</string>
    <string name="bics_screening_result">Result of BICS Screening Test</string>
    <string name="bics">Dynamic Mobile Assesssment of Cognition </string>
    <string name="doctor_name">Suresh Kumar, MD</string>
    <string name="press_start">Press Start</string>
    <string name="traumatic_injury_question1">How long ago did you have traumatic brain injury?</string>
    <string name="traumatic_injury_question2">If this is your second TBI, what is time duration between your first and second TBI/concussion?</string>
    <string name="title_activity_draw_rectangle">DrawRectangle</string>
    <string name="title_activity_false_positive_caution">FalsePositiveCaution</string>
    <string name="false_positive">DMAC may give false positive results in :</string>
    <string name="false_positive_cases">• Untreated depression or anxiety \n• Unrestful sleep overnight \n• Medication with drowsiness or   psycho motor slowing</string>
    <string name="restart">REPEAT</string>
    <string name="title_activity_pattern_show_layout">PatternShowLayout</string>
    <string name="pattern_remember">Remember the pattern</string>
    <string name="pattern_draw">Draw the Pattern</string>
    <string name="title_activity_rectangle_show">rectangleShow</string>
    <string name="drawing_remember">REMEMBER THE DRAWING</string>
    <string name="rectangleDrawInstruction">Remember the following drawing that will be displayed for 10 seconds. Draw on next screen with the help of the square and line tab on the top of the screen.</string>
    <string name="speak">SPEAK</string>
    <string name="type">TYPE</string>
    <string name="title_activity_similar_picture">SimilarPicture</string>
    <string name="title_activity_select_shapes">SelectShapes</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="selectShapeInstruction">A square or triangle image will flash in the next screen. Tap on the word "triangle" if a square is flashed. Tap on the word "square" if a triangle is flashed.</string>
    <string name="title_activity_select_letter">SelectLetter</string>
    <string name="similarPictureInstruction">Remember the images. Select the same image from the choice in next screen.</string>
    <string name="selectLetterInstruction">Tap on the button below when the letter “V” appears.</string>
    <string name="view_report">View Report</string>
    <string name="title_activity_report_display">reportDisplay</string>
    <string name="individual_score_report">BICS Report</string>
    <string name="exit">Exit</string>
    <string name="without_distraction">Please sit down in a quiet room with no distractions.</string>
    <string name="title_activity_terms_condition">TermsCondition</string>
    <string name="i_agree">I Agree</string>
    <string name="visual_cognitive_attention_task">Visual cognitive attention task</string>
    <string name="visual_recall_immediate_task">Visual recall immediate task</string>
    <string name="visual_spatial_immedite_task">Visual spatial immediate task</string>
    <string name="dis_inhibition_attention">Dis-inhibition/attention</string>
    <string name="declaratory_language_memory">Declaratory language memory</string>
    <string name="auditory_immediate_recall_story">Auditory immediate recall story</string>
    <string name="visual_motor_coordination">Visual motor coordination</string>
    <string name="visual_name_delayed_recall">Visual name delayed recall</string>
    <string name="visual_name_immediate_recall">Visual name immediate recall</string>
    <string name="auditory_delayed_recall">Auditory delayed recall</string>
    <string name="auditory_immediate_recall">Auditory immediate recall</string>
    <string name="number_recall">Auditory Number recall</string>
    <string name="number_recall_revers">Attention Number recall</string>
    <string name="read_disclaimer">Read End User Agreement and Disclaimer</string>
    <string name="pre_post_injury_question">Is it a Pre Concussion or Traumatic Brain Injury test or Post Concussion or Traumatic Brain Injury Test.</string>
    <string name="title_activity_initial_question_form">InitialQuestionForm</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_picture_flash_answer_immediate">PictureFlashAnswerImmediate
    </string>
    <string name="title_activity_word_audio_flash_answer_immediate">WordAudioFlashAnswerImmediate
    </string>
    <string name="audioWordAnswerImmediateInstruction">Please recall the words you have just heard on audio. Examiner, please take the tablet to enter the words.</string>
    <string name="title_activity_number_recall">NumberRecall</string>
    <string name="title_activity_reverse_number_recall">ReverseNumberRecall</string>
    <string name="title_activity_orientation">Orientation</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="orientation">Orientation</string>
    <string name="orientation_instruction"><![CDATA[You will be asked a few questions. Please answer them & you have 60 seconds to answer each.]]></string>
    <string name="title_activity_group_matching">GroupMatching</string>
    <string name="title_activity_group_matching_two">GroupMatchingTwo</string>
    <string name="group_matching">Group Matching</string>
    <string name="reverseNumberRecallInstruction">Combination of the numbers will be spoken. You have to remember and type or speak the numbers in Reverse order. Eg Spoken 789 you will  enter 987 .</string>
    <string name="groupMatchingInstruction">Drag the words that belong to the similar group or has an association.</string>
    <string name="type_number">Type the number</string>
    <string name="title_activity_delayed_recall_story">DelayedRecallStory</string>
    <string name="delayed_story_recall">Delayed Story Recall</string>
    <string name="next_story">NEXT STORY</string>
    <string name="delayedRecallStoryOneInstruction">Please try to recall the story 1 in same words as much as possible. Examiner, please take the tablet to enter the story1 in words.</string>
</resources>