<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sugoilabs.bics.Step1">


    <LinearLayout
        android:id="@+id/caution_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/step1_question_background"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/false_positive"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/false_positive_cases"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/without_distraction"
        android:layout_below="@+id/caution_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/step1_question_background"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/without_distraction"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"/>


    </LinearLayout>

    <Button
        android:id="@+id/activity_false_positive_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/step2_button_background"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_alignParentBottom="true" />




</RelativeLayout>
