<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sugoilabs.bics.Step2">



    <LinearLayout
        android:id="@+id/word_audio_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/step1_question_background"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/audio_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/press_start"
            android:textAllCaps="true"
            android:textColor="@color/red_dark"
            android:textSize="22sp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/word_audio_start_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word_audio_media"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/step1_question_background"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">
        <Button
            android:id="@+id/word_audio_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/step2_button_background"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/word_audio_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/step2_button_background"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="invisible"></Button>

    </LinearLayout>



</RelativeLayout>


