<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sugoilabs.bics.Step2">

    <!--
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:elevation="5dp"></include>
      -->


    <LinearLayout
        android:id="@+id/step4_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/step1_question_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/audio_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="Audio 1"
            android:textAllCaps="true"
            android:textColor="@color/red_dark"
            android:textSize="22sp" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step4_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/step1_question_background"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <EditText
            android:id="@+id/step4_answers_texview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/red_dark"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/step4_start_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step4_media"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/step1_question_background"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/step4_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/step2_button_background"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/play"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/step4_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/step2_button_background"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/step4_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/step1_question_background"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/step4_typein"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type" />

        <Button
            android:id="@+id/step4_speakout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speak" />

    </LinearLayout>


</RelativeLayout>


