<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sugoilabs.bics.Step2">


    <LinearLayout
        android:id="@+id/delayed_recall_story_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/step1_question_background"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/delayed_recall_story_answer_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/red_dark"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/delayed_recall_story_answer_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delayed_recall_story_answer_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/step1_question_background"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/delayed_recall_answer_typein"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type" />

        <Button
            android:id="@+id/delayed_recall_answer_speakout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speak" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delayed_recall_start_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delayed_recall_story_answer_input"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/step1_question_background"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:gravity="center">


        <Button
            android:id="@+id/delayed_recall_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/step2_button_background"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/next_story"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"></Button>

    </LinearLayout>



    <!-- android:background="@drawable/login_background"  -->
    <!--  android:background="@android:drawable/list_selector_background" -->


</RelativeLayout>


